# uefi-hello

./: Cargo.toml
.cargo/: config
mnt/: NvVars
mnt/EFI/BOOT/: BOOTx64.EFI
src/: main.rs
